fixed flagging and deflagging

--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ input {
 }
 .cell {
     color:rgba(255,255,255,0);
+    background:none;
     display:flex;
     align-items:center;
     justify-content:center;
